--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,26 +3,13 @@
     {
         box-shadow: 0 5px 5px -5px #333;
     }
-	.footer-bottom{
-		
-		/*box-shadow: 0 -5px 5px -5px #333;*/
- 		padding: 9px;
- 		position: absolute;
-  		bottom: 0;
-  		width: 100%;
-  		clear: both;
- 	 	margin-top: 0px;
-  padding-top: 0px;
-  overflow: visible;
-  	 height: 65px;
-	}
 
-
-.dropdown-submenu {
+    .dropdown-submenu
+    {
     position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
+    }
+    .dropdown-submenu>.dropdown-menu 
+    {
     top: 0;
     left: 100%;
     margin-top: -6px;
@@ -30,13 +17,13 @@
     -webkit-border-radius: 0 6px 6px 6px;
     -moz-border-radius: 0 6px 6px;
     border-radius: 0 6px 6px 6px;
-}
-
-.dropdown-submenu:hover>.dropdown-menu {
+  }
+  .dropdown-submenu:hover>.dropdown-menu 
+  {
     display: block;
-}
-
-.dropdown-submenu>a:after {
+  }
+  .dropdown-submenu>a:after 
+  {
     display: block;
     content: " ";
     float: right;
@@ -48,28 +35,27 @@
     border-left-color: #ccc;
     margin-top: 5px;
     margin-right: -10px;
-}
-
-.dropdown-submenu:hover>a:after {
+  }
+  .dropdown-submenu:hover>a:after 
+  {
     border-left-color: #fff;
-}
+  }
 
-.dropdown-submenu.pull-left {
+  .dropdown-submenu.pull-left
+  {
     float: none;
-}
-
-.dropdown-submenu.pull-left>.dropdown-menu {
+  }
+  .dropdown-submenu.pull-left>.dropdown-menu 
+  {
     left: -100%;
     margin-left: 10px;
     -webkit-border-radius: 6px 0 6px 6px;
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
-}
-
-#subRoles
-{
+  }
+  #subRoles
+  {
    text-decoration:none;  
    color: black;
    margin-left: 14%
-
-}
+  }
