--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,7 +74,7 @@ p{
 /*Seccion cards*/
 .iconos{
     color: #f0ad4e !important;
-    font-size: 4rem;
+    font-size: 4rem !important;
 }
 
 .bg-gris{
