--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,3 +59,23 @@
   color: black;
   margin-left: 14%
 }
+.system-icons
+{
+    font-size: 1.2rem;
+}
+.animacion {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
